--- a/signup.css
+++ b/signup.css
@@ -3,6 +3,7 @@ body > .Signup-Form
 {
     width: 100%;
     height: 3rem;
+    font-family:'Poppins', sans-serif;
 }
 body > .Signup-Form > .Heading
 {
@@ -295,6 +296,7 @@ body > .Signup-Form > .Heading > h2
     justify-content: space-around;
     align-items: start;
     width: 100%;
+    padding-top: 0.6rem;
     box-sizing: border-box;
 }
 
@@ -345,7 +347,7 @@ body > .Signup-Form > .Heading > h2
     align-items: start;
     width: 100%;
     box-sizing: border-box;
-    padding-top: .5rem;
+    padding-top: 1.2rem;
     
 }
  
@@ -381,7 +383,7 @@ body > .Signup-Form > .Heading > h2
 
 }
 
-.Zipcode-Romania > .Romania > input
+.Zipcode-Romania > .Romania > select
 {
 
     width: 100%;
@@ -441,5 +443,44 @@ body > .Signup-Form > .Heading > h2
     height: 4rem;
     box-sizing: border-box;
     padding-left: .5rem; 
+
+}
+
+.signup
+{ 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 3rem;
+    padding: 2rem 0;
+
+}
+
+.signup > .signup-button
+{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width:10rem;
+    border: 1px solid ;
+    background-color: rgb(15, 12, 12);
+    height: 3rem;
+
+
+
+}
+
+.signup > .signup-button > h3
+{
+    color: aliceblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-weight: 200;
 
 }
